# zf_terraria_clone

./: .clang-format  .gitignore  ;a  CMakeLists.txt  README.md  asset_build_instrs.json  zf_asset_building_instrs.json
assets/audio/music/: DAY_LICENSE.txt  TITLE_LICENSE.txt
docs/: todo.txt
scripts/windows_ninja/: build_debug.ps1  build_release.ps1  clean.ps1  run_debug.ps1  run_release.ps1
src/: assets.cpp  assets.h  audio_helpers.cpp  audio_helpers.h  camera.cpp  camera.h  clouds.cpp  clouds.h  config.h  entry.cpp  game.cpp  game.h  hitboxes.cpp  hitboxes.h  inventories.cpp  inventories.h  inventory.cpp  inventory.h  item_drops.cpp  item_drops.h  items.cpp  items.h  lighting.cpp  lighting.h  music.cpp  music.h  npcs.cpp  npcs.h  old_lighting.c  old_lighting.h  options.cpp  options.h  pch.h  phase_world.cpp  phase_world.h  player.cpp  player.h  pop_ups.cpp  pop_ups.h  sky.cpp  (+38 more)
src/old/: assets.cpp  assets.h  camera.cpp  camera.h  entry.c  game.c  game.cpp  game.h  inventories.cpp  inventory.c  items.c  items.h  lighting.c  lighting.h  npcs.c  npcs.h  particles.c  particles.h  player.c  projectiles.c  sprites.h  tilemap.c  tilemaps.h  tiles.h  title_screen.c  title_screen.cpp  title_screen.h  world.c  world_gen.c  world_gen.cpp  world_npcs.cpp  world_player.cpp  world_pop_ups.cpp  world_private.h  world_tilemaps.cpp  world_ui.c  world_ui.cpp
